--- a/Code/ReactAnimations/src/components/Modal/Modal.css
+++ b/Code/ReactAnimations/src/components/Modal/Modal.css
@@ -10,7 +10,7 @@
   top: 30%;
   left: 25%;
   width: 50%;
-  /*transition: all 0.3s ease-out;*/
+  transition: all 0.3s ease-out;
 }
 
 .ModalOpen {
@@ -18,35 +18,51 @@
 }
 
 .ModalClosed {
-  animation: closeModal 0.4s ease-out forwards;
+  animation: closeModal 1s ease-out forwards;
+}
+
+/* .fade-slide-enter {
+
+} */
+
+.fade-slide-enter-active {
+  animation: openModal 0.4s ease-out forwards;
+}
+
+/* .fade-slide-exit {
+
+} */
+
+.fade-slide-exit-active {
+  animation: closeModal 1s ease-out forwards;
 }
 
 @keyframes openModal {
   0% {
-    opacity: 0;
-    transform: translateY(-100%);
+      opacity: 0;
+      transform: translateY(-100%);
   }
   50% {
-    opacity: 1;
-    transform: translateY(20%);
+      opacity: 1;
+      transform: translateY(90%);
   }
   100% {
-    opacity: 1;
-    transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
   }
 }
 
 @keyframes closeModal {
-    0% {
+  0% {
       opacity: 1;
       transform: translateY(0);
-    }
-    50% {
+  }
+  50% {
       opacity: 0.8;
       transform: translateY(60%);
-    }
-    100% {
+  }
+  100% {
       opacity: 0;
       transform: translateY(-100%);
-    }
   }
+}
